feat: LotteryMachine 검증기 구현